--- a/src/theme/spotify-theme.scss
+++ b/src/theme/spotify-theme.scss
@@ -1,5 +1,5 @@
 // src/theme/spotify-theme.scss
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 
 @include mat.core();
 
@@ -7,10 +7,14 @@ $primary-palette: mat.define-palette(mat.$indigo-palette);
 $accent-palette: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $warn-palette: mat.define-palette(mat.$red-palette);
 
-$theme: mat.define-light-theme((color: (primary: $primary-palette,
-        accent: $accent-palette,
-        warn: $warn-palette,
-      ),
-    ));
+$theme: mat.define-light-theme(
+	(
+		color: (
+			primary: $primary-palette,
+			accent: $accent-palette,
+			warn: $warn-palette,
+		),
+	)
+);
 
 @include mat.all-component-themes($theme);
